samples/_failures_safe/1761626955_dd7200_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_652718b2.c: In function ‘main’:
./samples/SAFE/__tmp_652718b2.c:156:22: error: expected ‘;’ at end of input
  156 |                 break
      |                      ^
      |                      ;
./samples/SAFE/__tmp_652718b2.c:156:17: error: expected declaration or statement at end of input
  156 |                 break
      |                 ^~~~~
./samples/SAFE/__tmp_652718b2.c:156:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_652718b2.c:156:17: error: expected declaration or statement at end of input
